# uhttp-web

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: html_app.py  json_api.py  site_app.py
examples/templates/: admin.html.jinja  base.html.jinja  error.html.jinja  home.html.jinja  login.html.jinja  user_detail.html.jinja  user_list.html.jinja
tests/: test_web.py
uhttp/: web.py
